| Bug #715 | syntax error in keyword+number | ||
|---|---|---|---|
| Submitted: | 24 Jun 2003 15:46 | Modified: | 20 Jul 2003 3:57 |
| Reporter: | Sergei Golubchik | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S2 (Serious) |
| Version: | any | OS: | Any (any) |
| Assigned to: | Sergei Golubchik | CPU Architecture: | Any |
[24 Jun 2003 15:46]
Sergei Golubchik
[20 Jul 2003 3:57]
Sergei Golubchik
Thank you for your bug report. This issue has been fixed in the latest
development tree for that product. You can find more information about
accessing our development trees at
http://www.mysql.com/doc/en/Installing_source_tree.html
fixed in 4.1.1
